# Class2025

./: .dockerignore  .env.example  .env.host  .env.host.example  .gitignore  Dockerfile  ETF_TOP20_README.md  ETF_TOP20_V2_README.md  README.md  docker-compose-etf-worker-swarm.yml  docker-compose-producer-network.yml  docker-compose-redash-local.yml  docker-compose-scheduler-network-version.yml  docker-compose-worker-network-version.yml  docker-compose-worker-network.yml  docker-compose-worker.yml  local.ini  local.ini.example  mysql.yml  pyproject.toml  rabbitmq-network.yml
airflow/: .gitignore  README.md  SETUP.md  airflow-gce.cfg  airflow.cfg  docker-compose-airflow-gce.yml  docker-compose-airflow.yml  gce.with.env.Dockerfile  gce.with.env.cache.Dockerfile  local.ini.example  pyproject.toml  with.env.Dockerfile
airflow/dataflow/dags/: empty_operator.py  etf_crawler_dag.py
airflow/dataflow/etl/: abcd.py  bash_operator.py  branch_python_operator.py  docker_operator.py  empty_operator.py  hello_world.py  producer.py  producer_k8s.py  producer_twse.py  python_operator.py
crawler/: config.py  download_and_upload_taiwan_stock_margin_purchase_short_sale_to_mysql.py  download_and_upload_taiwan_stock_price_to_mysql.py  producer_crawler_etf_top20.py  producer_crawler_etf_top20_print.py  producer_crawler_etf_top20_v2.py  producer_crawler_etf_top20_v2_print.py  producer_crawler_etf_top20_v2_range.py  producer_crawler_finmind.py  scheduler_etf_top20.py  tasks_crawler_etf_top20.py  tasks_crawler_etf_top20_v2.py  tasks_crawler_finmind.py  tasks_crawler_finmind_duplicate.py  (+3 more)
(+5 files in other folders)
