[project]
name = "dataflow"
version = "0.0.1"
description = "test"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "linsam", email = "samlin266118@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pandas",
    "sqlalchemy",
    "pymysql==1.0.2",
    "loguru==0.6.0",
    "apache-airflow==2.7.3",
    "apache-airflow-providers-docker==3.0.0",
    "celery[redis]>=5.6.0",
    "flower==1.0.0",
    "apache-airflow-providers-celery==3.6.0",
    "apache-airflow-providers-google==10.17.0",
    "apache-airflow-providers-cncf-kubernetes==7.13.0",
    "google-cloud-storage==2.16.0",
    "flask-session==0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataflow"]
